# fluent

./: .gitignore  Hacking.md  LICENSE  Readme.md  Todo.md  fluent.py  fluent_test.py  fluentpy.py  pyproject.toml  readthedocs.yml  setup.py  shell.nix  tox.ini
.circleci/: config.yml
doc/: API-Docs.rst  Changelog.md  Hacking.md  Integration.md  Makefile  Todo.md  conf.py  index.md  index.rst  requirements.txt
doc/fluentpy/: fluentpy.rst
examples/aoc2018/: fluentpy.ipynb
examples/aoc2018/input/: day1.txt  day15.txt  day16.txt  day17.txt  day18.txt  day2.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt
fluentpy/: __init__.py  __main__.py  wrapper.py
